# satwavepy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: 01-get-cmems-satellite-data.ipynb  02-explore-satellite-map.ipynb  03-collocate.ipynb
src/satwavepy/: __init__.py
src/satwavepy/vizualize/: __init__.py  utils.py
tests/: test_satwavepy.py
