[tool.poetry]
name = "satwavepy"
version = "0.1.0"
description = "A package for analysing wave satellite measurements and model"
authors = ["C.W.E. de Korte"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
